[package]
name = "simple-encrypt"
version = "0.1.0"
edition = "2021"
description = "A simple file encryption tool using AES-GCM"
license = "MIT"
repository = "https://github.com/adityabaradwaj/simple-encrypt"
homepage = "https://github.com/adityabaradwaj/simple-encrypt"
readme = "README.md"
keywords = ["encryption", "aes", "crypto", "security", "cli"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
rand = "0.9"
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.3"
base64 = "0.21"
